--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     }
     repositories {
         flatDir {
-            dirs 'libs'   // aar目录
+            dirs 'libs'   // aar directory
         }
     }
 }
